[package]
name = "chainx-runtime-common"
version = "4.3.0"
authors = ["The ChainX Authors"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.1", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
smallvec = "1.4.1"
static_assertions = "1.1.0"

# Substrate primitives
sp-runtime = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18", default-features = false }

# Substrate pallets
frame-support = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18", default-features = false }
frame-system = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-balances = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-transaction-payment = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18", default-features = false }

# ChainX primitives
chainx-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "scale-info/std",
    # Substrate primitives
    "sp-runtime/std",
    # Substrate pallets
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-transaction-payment/std",
    # ChainX primitives
    "chainx-primitives/std",
]
