[package]
name = "malan-runtime"
version = "5.2.1"
authors = ["The ChainX Authors"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.1", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
smallvec = "1.4.1"
static_assertions = "1.1.0"

# Substrate primitives
sp-api = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-authority-discovery = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-block-builder = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-consensus-babe = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-core = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-inherents = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-io = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-offchain = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-runtime = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-session = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-staking = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-std = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-transaction-pool = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-version = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }

# Substrate pallets
frame-executive = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
frame-support = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
frame-system = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-authority-discovery = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-authorship = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-babe = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-balances = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-bounties = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-collective = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-democracy = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-grandpa = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-identity = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-im-online = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-indices = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-membership = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-multisig = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-offences = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-proxy = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-scheduler = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-session = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false, features = ["historical"] }
pallet-sudo = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-timestamp = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-tips = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-transaction-payment = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-treasury = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
pallet-utility = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }

frame-benchmarking = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false, optional = true }
frame-try-runtime = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false, optional = true }

# ChainX primitives
chainx-primitives = { path = "../../primitives", default-features = false }
chainx-runtime-common = { path = "../common", default-features = false }
# we use feature "ss58check" for using local runtime-interface to check address, if in parachain, do not use this feature
xp-gateway-bitcoin = { path = "../../primitives/gateway/bitcoin", default-features = false, features = ["ss58check"] }
xp-mining-staking = { path = "../../primitives/mining/staking", default-features = false }
xp-protocol = { path = "../../primitives/protocol", default-features = false }
xp-runtime = { path = "../../primitives/runtime", default-features = false }

# ChainX pallets
xpallet-assets = { path = "../../xpallets/assets", default-features = false }
xpallet-assets-registrar = { path = "../../xpallets/assets-registrar", default-features = false }
xpallet-assets-rpc-runtime-api = { path = "../../xpallets/assets/rpc/runtime-api", default-features = false }
xpallet-dex-spot = { path = "../../xpallets/dex/spot", default-features = false }
xpallet-dex-spot-rpc-runtime-api = { path = "../../xpallets/dex/spot/rpc/runtime-api", default-features = false }
xpallet-gateway-bitcoin = { path = "../../xpallets/gateway/bitcoin", default-features = false }
xpallet-gateway-bitcoin-rpc-runtime-api = { path = "../../xpallets/gateway/bitcoin/rpc/runtime-api", default-features = false }
xpallet-gateway-common = { path = "../../xpallets/gateway/common", default-features = false }
xpallet-gateway-common-rpc-runtime-api = { path = "../../xpallets/gateway/common/rpc/runtime-api", default-features = false }
xpallet-gateway-records = { path = "../../xpallets/gateway/records", default-features = false }
xpallet-gateway-records-rpc-runtime-api = { path = "../../xpallets/gateway/records/rpc/runtime-api", default-features = false }
xpallet-genesis-builder = { path = "../../xpallets/genesis-builder", default-features = false }
xpallet-mining-asset = { path = "../../xpallets/mining/asset", default-features = false }
xpallet-mining-asset-rpc-runtime-api = { path = "../../xpallets/mining/asset/rpc/runtime-api", default-features = false }
xpallet-mining-staking = { path = "../../xpallets/mining/staking", default-features = false }
xpallet-mining-staking-rpc-runtime-api = { path = "../../xpallets/mining/staking/rpc/runtime-api", default-features = false }
xpallet-system = { path = "../../xpallets/system", default-features = false }
xpallet-support = { path = "../../xpallets/support", default-features = false }
xpallet-transaction-fee = { path = "../../xpallets/transaction-fee", default-features = false }
xpallet-transaction-fee-rpc-runtime-api = { path = "../../xpallets/transaction-fee/rpc/runtime-api", default-features = false }
xpallet-btc-ledger = { path = "../../xpallets/btc-ledger", default-features = false }
xpallet-btc-ledger-runtime-api = { path = "../../xpallets/btc-ledger/rpc/runtime-api", default-features = false }

# Evm
pallet-evm = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix", default-features = false, features = ["chainx-adaptor"] }
pallet-ethereum = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix", default-features = false }
pallet-base-fee = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix", default-features = false }
xpallet-ethereum-chain-id = { path = "../../xpallets/ethereum-chain-id", default-features = false }
xpallet-assets-bridge = { path = "../../xpallets/assets-bridge", default-features = false }

# EVM precompile
fp-evm = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix", default-features = false }
pallet-evm-precompile-blake2 = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix", default-features = false }
# ETH API
fp-rpc = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix", default-features = false }
fp-self-contained = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc-fix", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix" }

[features]
default = ["std", "pallet-session/historical"]
std = [
  "codec/std",
  "scale-info/std",
  "serde",
  # Substrate primitives
  "sp-api/std",
  "sp-authority-discovery/std",
  "sp-block-builder/std",
  "sp-consensus-babe/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-staking/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  # Substrate pallets
  "frame-executive/std",
  "frame-support/std",
  "frame-system/std",
  "frame-system-rpc-runtime-api/std",
  "frame-benchmarking/std",
  "frame-try-runtime/std",
  "pallet-authority-discovery/std",
  "pallet-authorship/std",
  "pallet-babe/std",
  "pallet-balances/std",
  "pallet-bounties/std",
  "pallet-collective/std",
  "pallet-democracy/std",
  "pallet-elections-phragmen/std",
  "pallet-grandpa/std",
  "pallet-identity/std",
  "pallet-im-online/std",
  "pallet-indices/std",
  "pallet-membership/std",
  "pallet-multisig/std",
  "pallet-offences/std",
  "pallet-proxy/std",
  "pallet-scheduler/std",
  "pallet-session/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",
  "pallet-tips/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-treasury/std",
  "pallet-utility/std",
  # ChainX primitives
  "chainx-primitives/std",
  "chainx-runtime-common/std",
  "xp-gateway-bitcoin/std",
  "xp-mining-staking/std",
  "xp-protocol/std",
  "xp-runtime/std",
  # ChainX pallets
  "xpallet-assets/std",
  "xpallet-assets-registrar/std",
  "xpallet-assets-rpc-runtime-api/std",
  "xpallet-dex-spot/std",
  "xpallet-dex-spot-rpc-runtime-api/std",
  "xpallet-gateway-bitcoin/std",
  "xpallet-gateway-bitcoin-rpc-runtime-api/std",
  "xpallet-gateway-common/std",
  "xpallet-gateway-common-rpc-runtime-api/std",
  "xpallet-gateway-records/std",
  "xpallet-gateway-records-rpc-runtime-api/std",
  "xpallet-genesis-builder/std",
  "xpallet-mining-asset/std",
  "xpallet-mining-asset-rpc-runtime-api/std",
  "xpallet-mining-staking/std",
  "xpallet-mining-staking-rpc-runtime-api/std",
  "xpallet-system/std",
  "xpallet-support/std",
  "xpallet-transaction-fee/std",
  "xpallet-transaction-fee-rpc-runtime-api/std",
  "xpallet-btc-ledger/std",
  "xpallet-btc-ledger-runtime-api/std",
  # EVM
  "pallet-evm/std",
  "pallet-ethereum/std",
  "pallet-base-fee/std",
  "xpallet-ethereum-chain-id/std",
  "xpallet-assets-bridge/std",
  "fp-evm/std",
  "fp-rpc/std",
  "fp-self-contained/std",
]
runtime-benchmarks = [
  "hex-literal",
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "xpallet-assets/runtime-benchmarks",
  "xpallet-assets-registrar/runtime-benchmarks",
  "xpallet-dex-spot/runtime-benchmarks",
  "xpallet-gateway-bitcoin/runtime-benchmarks",
  "xpallet-gateway-common/runtime-benchmarks",
  "xpallet-gateway-records/runtime-benchmarks",
  "xpallet-mining-asset/runtime-benchmarks",
  "xpallet-mining-staking/runtime-benchmarks",
  "pallet-ethereum/runtime-benchmarks",
  "pallet-evm/runtime-benchmarks",
]

try-runtime = [
  "frame-try-runtime",
  "frame-executive/try-runtime",
  "frame-system/try-runtime",

  "pallet-authority-discovery/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-babe/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-bounties/try-runtime",
  "pallet-collective/try-runtime",
  "pallet-democracy/try-runtime",
  "pallet-elections-phragmen/try-runtime",
  "pallet-grandpa/try-runtime",
  "pallet-identity/try-runtime",
  "pallet-im-online/try-runtime",
  "pallet-indices/try-runtime",
  "pallet-membership/try-runtime",
  "pallet-multisig/try-runtime",
  "pallet-offences/try-runtime",
  "pallet-proxy/try-runtime",
  "pallet-scheduler/try-runtime",
  "pallet-session/try-runtime",
  "pallet-sudo/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-tips/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-treasury/try-runtime",
  "pallet-utility/try-runtime",

  # ChainX pallets
  "xpallet-assets/try-runtime",
  "xpallet-assets-registrar/try-runtime",
  "xpallet-dex-spot/try-runtime",
  "xpallet-gateway-bitcoin/try-runtime",
  "xpallet-gateway-common/try-runtime",
  "xpallet-gateway-records/try-runtime",
  "xpallet-mining-asset/try-runtime",
  "xpallet-mining-staking/try-runtime",
  "xpallet-btc-ledger/try-runtime",

  # EVM
  "pallet-ethereum/try-runtime",
  "xpallet-assets-bridge/try-runtime"
]
