[package]
name = "chainx-runtime"
version = "0.3.0"
authors = ["Chainpool <http://www.chainx.org>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
integer-sqrt = { git = "https://github.com/paritytech/integer-sqrt-rs.git", branch = "master" }
safe-mix = { version = "1.0", default_features = false}

parity-codec = { version = "2.1", default-features = false }
parity-codec-derive = { version = "2.1" }

substrate-primitives = { git = "https://github.com/chainpool/substrate", default-features = false }
substrate-finality-grandpa-primitives = { git = "https://github.com/chainpool/substrate", default-features = false }

sr-primitives = { git = "https://github.com/chainpool/substrate", default-features = false }
sr-version = { git = "https://github.com/chainpool/substrate", default-features = false }
sr-std = { git = "https://github.com/chainpool/substrate", default-features = false }
sr-io = { git = "https://github.com/chainpool/substrate", default-features = false }

srml-support = { git = "https://github.com/chainpool/substrate", default-features = false }
srml-system = { git = "https://github.com/chainpool/substrate", default-features = false }
srml-balances = { git = "https://github.com/chainpool/substrate", default-features = false }
srml-timestamp = { git = "https://github.com/chainpool/substrate", default-features = false }
srml-consensus = { git = "https://github.com/chainpool/substrate", default-features = false }
srml-session = { git = "https://github.com/chainpool/substrate", default-features = false }
srml-grandpa = { git = "https://github.com/chainpool/substrate", default-features = false }
srml-aura = { git = "https://github.com/chainpool/substrate", default-features = false }

srml-contract = { git = "https://github.com/chainpool/substrate", default-features = false }
srml-council = { git = "https://github.com/chainpool/substrate", default-features = false }
srml-democracy = { git = "https://github.com/chainpool/substrate", default-features = false }
srml-treasury = { git = "https://github.com/chainpool/substrate", default-features = false }

# chain
chainx-primitives = { path = "../../primitives", default-features = false }

# chainx runtime module
xrml-xsystem = { path = "../../xrml/xsystem", default-features = false }
xrml-xaccounts = { path = "../xrml/xaccounts", default-features = false }
# fee
xrml-fee-manager = { path = "../../xrml/xfee/manager", default-features = false }
# assets
xrml-xassets-assets = { path = "../../xrml/xassets/assets", default-features = false }

[features]
default = []
std = [
    "safe-mix/std",
    "parity-codec/std",
    "substrate-primitives/std",
    "substrate-finality-grandpa-primitives/std",

    # substrate runtime module
    "sr-primitives/std",
    "sr-version/std",
    "sr-std/std",
    "sr-io/std",

    "srml-support/std",
    "srml-system/std",
    "srml-balances/std",
    "srml-timestamp/std",
    "srml-consensus/std",
    "srml-session/std",
    "srml-grandpa/std",
    "srml-aura/std",

    "srml-contract/std",
    "srml-council/std",
    "srml-democracy/std",
    "srml-treasury/std",
    # chainx
    "chainx-primitives/std",
    # chainx runtime
    "xrml-xsystem/std",
    "xrml-xaccounts/std",
    # fee
    "xrml-fee-manager/std",
    # asset
    "xrml-xassets-assets/std"
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
