[package]
name = "chainx-runtime-wasm"
version = "0.4.0"
authors = ["Chainpool <http://www.chainx.org>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
chainx-runtime = { path = "..", default-features = false }

[features]
default = []
std = [
    "chainx-runtime/std"
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
